--- a/code/pom.xml
+++ b/code/pom.xml
@@ -42,7 +42,12 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>5.1.46</version>
 		</dependency>
-	    
+		
+		<dependency>
+		    <groupId>io.reactivex.rxjava2</groupId>
+		    <artifactId>rxjava</artifactId>
+		    <version>2.2.0</version>
+		</dependency>	    
 	    <!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
